force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/ucinn_portal_Newsletter_Section__c.object-meta.xml
<CustomObject>
    <label>Newsletter Section</label>
    <nameField>
        <label>Newsletter Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Newsletter Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>