force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <label>Background Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>