force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <label>End Date Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>