force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/fields/Header_Content__c.field-meta.xml
<CustomField>
    <fullName>Header_Content__c</fullName>
    <label>Header Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>