force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/fields/Header_URL__c.field-meta.xml
<CustomField>
    <fullName>Header_URL__c</fullName>
    <label>Header URL</label>
    <type>Url</type>
</CustomField>