force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/fields/Image_Alt_Text__c.field-meta.xml
<CustomField>
    <fullName>Image_Alt_Text__c</fullName>
    <label>Image Alt Text</label>
    <length>120</length>
    <type>Text</type>
</CustomField>