force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/fields/Image_Alternative_Text__c.field-meta.xml
<CustomField>
    <fullName>Image_Alternative_Text__c</fullName>
    <label>Image Alternative Text</label>
    <length>150</length>
    <type>Text</type>
</CustomField>