force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/fields/Newsletter_HTML__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_HTML__c</fullName>
    <label>Newsletter HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>