force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/fields/Newsletter_Listing__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Listing__c</fullName>
    <label>Newsletter Listing</label>
    <referenceTo>ucinn_portal_Listing__c</referenceTo>
    <relationshipLabel>Newsletter Sections</relationshipLabel>
    <relationshipName>ucinn_portal_Newsletter_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>