force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/fields/Order_In_Section__c.field-meta.xml
<CustomField>
    <fullName>Order_In_Section__c</fullName>
    <label>Order In Section</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>