force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/fields/Selected_Module__c.field-meta.xml
<CustomField>
    <fullName>Selected_Module__c</fullName>
    <label>Selected Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Module 1</fullName>
            </value>
            <value>
                <fullName>Module 2</fullName>
            </value>
            <value>
                <fullName>Module 3</fullName>
            </value>
            <value>
                <fullName>Module 4</fullName>
            </value>
            <value>
                <fullName>Module 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>