force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/recordTypes/Newsletter_Section.recordType-meta.xml
<RecordType>
    <fullName>Newsletter_Section</fullName>
    <active>true</active>
    <label>Newsletter Section</label>
</RecordType>