force-app/main/default/objects/ucinn_portal_Newsletter_Section__c/recordTypes/Newsletter_Section_Template.recordType-meta.xml
<RecordType>
    <fullName>Newsletter_Section_Template</fullName>
    <active>true</active>
    <label>Newsletter Section Template</label>
</RecordType>